# cmakeStudy

./: CMakeLists.txt  LICENSE  README.md  globalFunc.cpp  globalFunc.h  main.cpp
cpp11-thread/: CMakeLists.txt  mytest.cpp
include/: asio.hpp
include/libwebsockets/: lws_config.h
lib/libwebsockets/: libwebsockets.so.17
libwebsockets-client/: CMakeLists.txt  client.cpp
pythonTest/: wsClient.py  wsServer.py  wssClient.py  wssServer.py
ws-client/: CMakeLists.txt  echo_client.cpp
ws-server/: CMakeLists.txt  echo_server.cpp
wss-client/: CMakeLists.txt  echo_client.cpp
